test/libsolidity/syntaxTests/dataLocations/publicFunction/function_argument_location_specifier_test_public_storage.sol
contract test {
    function f(bytes storage) public;
}
// ----
// TypeError: (31-36): Storage location must be one of "memory" for parameter in public function, but "storage" was given.
